2005-03-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentTests.cs : Added ReadNodeEntityReferenceFillsChildren.
	  Test case by Konstantin Triger.

2005-03-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlValidatingReaderTests.cs : added ResolveEntityReadAttributeValue()

2005-03-03  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriterTests.cs : added testcase for duplicating namespace 
	  mapping processing (should create another prefix, not exception).

2005-03-02  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriterTests.cs : Added test for LookupPrefix() for
	  overriden prefix.

2005-02-25  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNodeTests.cs : added Clone() of readonly node returns a node
	  that is not readonly.

2005-02-25  Atsushi Enomoto <atsushi@ximian.com>

	* XmlAttributeTests.cs : added nonNCName Prefix case.

2005-02-24  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriterTests.cs : Test for call to WriteRaw() -> WriteString()

2005-02-16  Atsushi Enomoto <atsushi@ximian.com>

	* XmlConvertTests.cs : added some null/empty string cases for
	  EncodeName()/EncodeLocalName()/EncodeNmToken().

2005-02-15  Atsushi Enomoto <atsushi@ximian.com>

	* XmlElementTests.cs : assertion numbering on 
	  RemoveDoesNotRemoveDefaultAttributes().

2005-01-26  Nick Drochak  <ndrochak@ieee.org>

	* XmlValidatingReaderTests.cs: Move MS.NET bug-exposing test to a new
	test method and ignore it on .NET.

2005-01-17  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderSettingsTests.cs : added some .ctor() tests.

2005-01-13  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderCommonTests.cs : added labels for tests.
	  Marked MoveToXmlDeclAttributes() as [Ignore] again because there is
	  no consistent reference implementation to follow.

2005-01-13  Atsushi Enomoto <atsushi@ximian.com>

	* XmlValidatingReaderTests.cs,
	  XmlReaderCommonTests.cs,
	  XmlTextWriterTests.cs,
	  XmlUrlResolverTests.cs :
	  Marked as NotDotNet for those tests that fails under MS.NET.